dataset generation for ESM

--- a/notebooks/esm.ipynb
+++ b/notebooks/esm.ipynb
@@ -333,31 +333,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 57,
    "id": "0b8378b6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# funciton to get embeddings in batch:\n",
     "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
-    "from typing import Sequence, Tuple, List, Any\n",
+    "from typing import Sequence, Tuple, List, Any, Union\n",
     "from tqdm.auto import tqdm\n",
-    "from esm.sdk.api import (\n",
-    "    ESMProtein,\n",
-    "    ESMProteinError,\n",
-    "    LogitsConfig,\n",
-    ")\n",
+    "from esm.models.esmc import ESMC\n",
+    "from esm.sdk.api import ESMProtein, LogitsConfig\n",
     "\n",
-    "def embed_sequence(client: ESMC, sequence):\n",
+    "def embed_sequence(client: ESMC, sequence: Union[str, ESMProtein]):\n",
+    "    \"\"\"Return (logits, embeddings) on CPU. Shapes: (1, L, V), (1, L, D).\"\"\"\n",
     "    protein = sequence if isinstance(sequence, ESMProtein) else ESMProtein(sequence)\n",
     "    enc = client.encode(protein)\n",
     "    out = client.logits(enc, LogitsConfig(sequence=True, return_embeddings=True))\n",
-    "    return out.logits.sequence, out.embeddings\n",
+    "    # move to CPU to avoid GPU-memory blowup and ensure cat compatibility\n",
+    "    return out.logits.sequence.detach().to(\"cpu\"), out.embeddings.detach().to(\"cpu\")\n",
     "\n",
-    "def batch_embed(client, inputs: Sequence[str], max_workers: int = 4) -> Tuple[List[Any], List[Any]]:\n",
+    "# --- batch wrapper (threaded; set max_workers=1 for safest CUDA use) ---\n",
+    "def batch_embed(\n",
+    "    client: ESMC,\n",
+    "    inputs: Sequence[Union[str, ESMProtein]],\n",
+    "    max_workers: int = 1,   # GPU models are often not thread-safe; 1 is safest\n",
+    ") -> Tuple[List[torch.Tensor], List[torch.Tensor]]:\n",
     "    \"\"\"\n",
-    "    Runs embed_sequence(client, seq) concurrently for each seq in `inputs`.\n",
-    "    Returns two lists (logits_list, embeddings_list) in the SAME order as `inputs`.\n",
+    "    Runs embed_sequence for each input. Preserves order, returns lists of tensors.\n",
     "    \"\"\"\n",
     "    n = len(inputs)\n",
     "    logits:     List[Any] = [None] * n\n",
@@ -375,12 +378,49 @@
     "                logits[i] = e\n",
     "                embeddings[i] = e\n",
     "\n",
-    "    return logits, embeddings"
+    "    # check for errors\n",
+    "    errors = [(i, x) for i, x in enumerate(logits) if isinstance(x, Exception)]\n",
+    "    if errors:\n",
+    "        msgs = \"\\n\".join([f\"  idx {i}: {err}\" for i, err in errors])\n",
+    "        raise RuntimeError(f\"{len(errors)} sequences failed:\\n{msgs}\")\n",
+    "\n",
+    "    # type narrowing\n",
+    "    logits = [t for t in logits if isinstance(t, torch.Tensor)]\n",
+    "    embeddings = [t for t in embeddings if isinstance(t, torch.Tensor)]\n",
+    "    return logits, embeddings\n",
+    "\n",
+    "# --- dataset helper ---\n",
+    "def create_dataset(df: pd.DataFrame, n: int, client: ESMC):\n",
+    "    \"\"\"\n",
+    "    Samples n rows, embeds seq_mutated strings.\n",
+    "    Returns:\n",
+    "      logits_b:     Tensor (N, L, V)\n",
+    "      embeddings_b: Tensor (N, L, D)\n",
+    "      labels_t:     Tensor (N,)\n",
+    "    \"\"\"\n",
+    "    sampled_df = df.sample(n)  # add random_state=... for reproducibility\n",
+    "    inputs = sampled_df[\"seq_mutated\"].tolist()  # keep as strings\n",
+    "    labels = sampled_df[\"Class\"].tolist()\n",
+    "\n",
+    "    logits_list, emb_list = batch_embed(client, inputs, max_workers=1)\n",
+    "\n",
+    "    # sanity: all lengths equal\n",
+    "    lengths = [t.shape[1] for t in logits_list]\n",
+    "    if len(set(lengths)) != 1:\n",
+    "        raise ValueError(f\"Sequences have different lengths: {set(lengths)}; \"\n",
+    "                         \"cannot concatenate without padding.\")\n",
+    "\n",
+    "    # concatenate along the batch dimension (dim=0)\n",
+    "    logits_b = torch.cat(logits_list, dim=0)       # (N, L, V)\n",
+    "    embeddings_b = torch.cat(emb_list, dim=0)      # (N, L, D)\n",
+    "    labels_t = torch.as_tensor(labels)\n",
+    "\n",
+    "    return logits_b, embeddings_b, labels_t\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 58,
    "id": "88d499e6",
    "metadata": {},
    "outputs": [],
@@ -391,35 +431,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "977fa2cc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create the dataset\n",
-    "def create_dataset(df:pd.DataFrame, n:int):\n",
-    "    \n",
-    "    sampled_df = df.sample(n)\n",
-    "    inputs = sampled_df[\"seq_mutated\"].tolist()\n",
-    "    inputs = [ESMProtein(seq) for seq in inputs]\n",
-    "    labels = sampled_df[\"Class\"].tolist()\n",
-    "\n",
-    "    logits, embeddings = batch_embed(client, inputs)\n",
-    "\n",
-    "    return torch.cat(logits), torch.cat(embeddings), torch.Tensor(labels)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 60,
    "id": "4c6bc71d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a032a8b21274b41b0f73acfa94b34fb",
+       "model_id": "d1e07104790745bcbbaa90e58cda38c9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -432,35 +451,62 @@
     }
    ],
    "source": [
-    "logits, embeddings, labels = create_dataset(gfp_dataset_original, 10)"
+    "logits, embeddings, labels = create_dataset(gfp_dataset_original, 10, client)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "9608d4cb",
+   "execution_count": 68,
+   "id": "14c47a71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# now let's create a dataset with Pytorch + model\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "class CustomDataset(Dataset):\n",
+    "    def __init__(self, df:pd.DataFrame, n:int, client):\n",
+    "        logits, embeddings, labels = create_dataset(gfp_dataset_original, n, client)\n",
+    "        self.features = embeddings\n",
+    "        self.labels = labels\n",
+    "    def __len__(self):\n",
+    "        return len(self.labels)\n",
+    "    def __getitem__(self, index):\n",
+    "        embedding = self.features[index]\n",
+    "        label = self.labels[index]\n",
+    "        return embedding, label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "5cd1d1a3",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ccc09025d3b043e1b3009a212559d2e0",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "torch.Size([10, 240, 1152])"
+       "Embedding:   0%|          | 0/10 [00:00<?, ?it/s]"
       ]
      },
-     "execution_count": 52,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "logits.shape\n",
-    "embeddings.shape"
+    "dataset = CustomDataset(gfp_dataset_original, 10, client)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d87e9b5c",
+   "id": "2d192550",
    "metadata": {},
    "outputs": [],
    "source": []
