first pass with classifier

--- a/notebooks/esm.ipynb
+++ b/notebooks/esm.ipynb
@@ -431,31 +431,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "4c6bc71d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d1e07104790745bcbbaa90e58cda38c9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Embedding:   0%|          | 0/10 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "logits, embeddings, labels = create_dataset(gfp_dataset_original, 10, client)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 68,
    "id": "14c47a71",
    "metadata": {},
@@ -480,14 +455,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 73,
    "id": "5cd1d1a3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ccc09025d3b043e1b3009a212559d2e0",
+       "model_id": "c5011bb46c1a4e6e95ee73999b20e9c5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -500,13 +475,303 @@
     }
    ],
    "source": [
-    "dataset = CustomDataset(gfp_dataset_original, 10, client)"
+    "dataset = CustomDataset(gfp_dataset_original, 10, client)\n",
+    "WT_L, WT = embed_sequence(client, seq)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c2d71995",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([10, 240, 1152])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "id": "2d192550",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a simple NN:\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import math\n",
+    "\n",
+    "class SinusoidalPositionalEncoding(nn.Module):\n",
+    "    def __init__(self, d_model: int, max_len: int = 512):\n",
+    "        super().__init__()\n",
+    "        pe = torch.zeros(max_len, d_model)\n",
+    "        pos = torch.arange(0, max_len, dtype=torch.float32).unsqueeze(1)\n",
+    "        div = torch.exp(torch.arange(0, d_model, 2, dtype=torch.float32) *\n",
+    "                        (-math.log(10000.0) / d_model))\n",
+    "        pe[:, 0::2] = torch.sin(pos * div)\n",
+    "        pe[:, 1::2] = torch.cos(pos * div)\n",
+    "        self.register_buffer(\"pe\", pe[None])  # (1, max_len, d_model)\n",
+    "\n",
+    "    def forward(self, x):  # x: (B, L, D)\n",
+    "        return x + self.pe[:, :x.size(1), :]\n",
+    "\n",
+    "class WTMutClassifier(nn.Module):\n",
+    "    \"\"\"\n",
+    "    Compare mutant (MT) to wildtype (WT) residue-wise and classify sequence (0/1).\n",
+    "\n",
+    "    Inputs:\n",
+    "      wt: (1, L, D) or (B, L, D)  wildtype embeddings (broadcast if 1, L, D)\n",
+    "      mt: (B, L, D)               mutant embeddings\n",
+    "\n",
+    "    Output:\n",
+    "      logits: (B,)  (use BCEWithLogitsLoss)\n",
+    "    \"\"\"\n",
+    "    def __init__(self, in_dim=1152, hidden=512, n_layers=2, n_heads=8, dropout=0.1, max_len=256):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        # per-residue projection (shared for WT/MT)\n",
+    "        self.norm = nn.LayerNorm(in_dim)\n",
+    "        self.proj = nn.Linear(in_dim, hidden)\n",
+    "\n",
+    "        # fuse per-residue pair features into model dim\n",
+    "        # features = [Δ, |Δ|, WT⊙MT]  -> 3*hidden  -> hidden\n",
+    "        self.fuse = nn.Sequential(\n",
+    "            nn.Linear(3 * hidden, hidden),\n",
+    "            nn.GELU(),\n",
+    "            nn.Dropout(dropout),\n",
+    "        )\n",
+    "\n",
+    "        # transformer over residue deltas\n",
+    "        enc_layer = nn.TransformerEncoderLayer(\n",
+    "            d_model=hidden, nhead=n_heads, dim_feedforward=hidden * 4,\n",
+    "            dropout=dropout, activation=\"gelu\", batch_first=True, norm_first=True\n",
+    "        )\n",
+    "        self.encoder = nn.TransformerEncoder(enc_layer, num_layers=n_layers)\n",
+    "\n",
+    "        # [CLS] token + positional encoding\n",
+    "        self.cls = nn.Parameter(torch.zeros(1, 1, hidden))\n",
+    "        nn.init.trunc_normal_(self.cls, std=0.02)\n",
+    "        self.posenc = SinusoidalPositionalEncoding(hidden, max_len=max_len + 1)\n",
+    "\n",
+    "        self.head = nn.Sequential(\n",
+    "            nn.LayerNorm(hidden),\n",
+    "            nn.Linear(hidden, 1)  # single logit\n",
+    "        )\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "\n",
+    "    def forward(self, wt, mt, lengths=None):\n",
+    "        \"\"\"\n",
+    "        wt: (1, L, D) or (B, L, D)\n",
+    "        mt: (B, L, D)\n",
+    "        lengths (optional): (B,) valid lengths if sequences are padded.\n",
+    "        \"\"\"\n",
+    "        B, L, D = mt.shape\n",
+    "        if wt.shape[0] == 1:\n",
+    "            wt = wt.expand(B, -1, -1)  # broadcast the single WT to the batch\n",
+    "\n",
+    "        # project to hidden\n",
+    "        wt_h = self.proj(self.norm(wt))   # (B, L, hidden)\n",
+    "        mt_h = self.proj(self.norm(mt))   # (B, L, hidden)\n",
+    "\n",
+    "        # residue-wise pair features\n",
+    "        delta = mt_h - wt_h\n",
+    "        feat = torch.cat([delta, delta.abs(), wt_h * mt_h], dim=-1)  # (B, L, 3*hidden)\n",
+    "        h = self.fuse(feat)  # (B, L, hidden)\n",
+    "\n",
+    "        # prepend [CLS] and add positions\n",
+    "        cls = self.cls.expand(B, 1, -1)\n",
+    "        h = torch.cat([cls, h], dim=1)         # (B, L+1, hidden)\n",
+    "        h = self.posenc(h)\n",
+    "\n",
+    "        # optional padding mask (True = masked)\n",
+    "        key_padding_mask = None\n",
+    "        if lengths is not None:\n",
+    "            mask_seq = torch.arange(L, device=lengths.device)[None, :].expand(B, L) >= lengths[:, None]\n",
+    "            key_padding_mask = torch.cat([torch.zeros(B, 1, dtype=torch.bool, device=lengths.device),\n",
+    "                                          mask_seq], dim=1)\n",
+    "\n",
+    "        # encode and classify\n",
+    "        h = self.encoder(h, src_key_padding_mask=key_padding_mask)\n",
+    "        cls_repr = self.dropout(h[:, 0])\n",
+    "        logits = self.head(cls_repr).squeeze(-1)  # (B,)\n",
+    "        return logits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "24177e74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import Dataset, DataLoader, random_split\n",
+    "from sklearn.metrics import roc_auc_score, accuracy_score\n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "c7d86383",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def collate_batch(batch):\n",
+    "    embs, labels = zip(*batch)\n",
+    "    x = torch.stack([torch.as_tensor(e, dtype=torch.float32) for e in embs], dim=0)  # (B, L, D)\n",
+    "    y = torch.as_tensor(labels, dtype=torch.float32)  # (B,)\n",
+    "    return x, y\n",
+    "\n",
+    "# --- tiny helpers ---\n",
+    "def epoch_pass(model, loader, device, WT_t, criterion, optimizer=None):\n",
+    "    train = optimizer is not None\n",
+    "    model.train() if train else model.eval()\n",
+    "\n",
+    "    losses, all_probs, all_targets = [], [], []\n",
+    "    for x, y in loader:\n",
+    "        x, y = x.to(device), y.to(device)\n",
+    "        if train:\n",
+    "            optimizer.zero_grad(set_to_none=True)\n",
+    "\n",
+    "        logits = model(WT_t, x)\n",
+    "        loss = criterion(logits, y)\n",
+    "        if train:\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "\n",
+    "        probs = torch.sigmoid(logits).detach().cpu().numpy()\n",
+    "        targets = y.detach().cpu().numpy()\n",
+    "\n",
+    "        losses.append(loss.item())\n",
+    "        all_probs.append(probs)\n",
+    "        all_targets.append(targets)\n",
+    "\n",
+    "    all_probs = np.concatenate(all_probs) if all_probs else np.array([])\n",
+    "    all_targets = np.concatenate(all_targets) if all_targets else np.array([])\n",
+    "    preds = (all_probs >= 0.5).astype(int) if len(all_probs) else np.array([])\n",
+    "    acc = accuracy_score(all_targets, preds) if len(preds) else float(\"nan\")\n",
+    "    return float(np.mean(losses)), acc\n",
+    "\n",
+    "# --- simple prototype training ---\n",
+    "def train_prototype(\n",
+    "    df, n, client, WT, in_dim=1152,\n",
+    "    batch_size=32, epochs=5, lr=3e-4, val_split=0.2, seed=42, device=None\n",
+    "):\n",
+    "    # Dataset & split\n",
+    "    full_ds = CustomDataset(df, n, client)\n",
+    "    n_total = len(full_ds)\n",
+    "    n_val = int(n_total * val_split)\n",
+    "    n_train = n_total - n_val\n",
+    "    train_ds, val_ds = random_split(full_ds, [n_train, n_val], generator=torch.Generator().manual_seed(seed))\n",
+    "\n",
+    "    train_loader = DataLoader(train_ds, batch_size=batch_size, shuffle=True, collate_fn=collate_batch)\n",
+    "    val_loader   = DataLoader(val_ds,   batch_size=batch_size, shuffle=False, collate_fn=collate_batch)\n",
+    "\n",
+    "    # Device\n",
+    "    if device is None:\n",
+    "        device = torch.device(\"cuda\" if torch.cuda.is_available() else\n",
+    "                              \"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
+    "\n",
+    "    # WT tensor\n",
+    "    WT_t = torch.as_tensor(WT, dtype=torch.float32)\n",
+    "    if WT_t.dim() == 2:\n",
+    "        WT_t = WT_t.unsqueeze(0)  # -> (1, L, D)\n",
+    "    WT_t = WT_t.to(device)\n",
+    "\n",
+    "    # Model\n",
+    "    model = WTMutClassifier(in_dim=in_dim, hidden=512, n_layers=2, n_heads=8, dropout=0.1, max_len=256).to(device)\n",
+    "\n",
+    "    # ---- Compute class weights for imbalance ----\n",
+    "    labels = np.array([full_ds[i][1] for i in range(len(full_ds))])\n",
+    "    n_pos, n_neg = (labels == 1).sum(), (labels == 0).sum()\n",
+    "    pos_weight = torch.tensor(n_neg / max(n_pos, 1), dtype=torch.float32).to(device)\n",
+    "    criterion = nn.BCEWithLogitsLoss(pos_weight=pos_weight)\n",
+    "\n",
+    "    # Optimizer\n",
+    "    optimizer = torch.optim.AdamW(model.parameters(), lr=lr)\n",
+    "\n",
+    "    # Train loop\n",
+    "    for ep in range(1, epochs + 1):\n",
+    "        tr_loss, tr_acc = epoch_pass(model, train_loader, device, WT_t, criterion, optimizer=optimizer)\n",
+    "        va_loss, va_acc = epoch_pass(model, val_loader, device, WT_t, criterion, optimizer=None)\n",
+    "        print(f\"Epoch {ep:02d} | train_loss {tr_loss:.4f} acc {tr_acc:.4f} | \"\n",
+    "              f\"val_loss {va_loss:.4f} acc {va_acc:.4f}\")\n",
+    "\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "1135af8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e779fb21bc49404cae4676e4f006ef82",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Embedding:   0%|          | 0/500 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/n/home06/tbush/envs/esm/lib/python3.12/site-packages/torch/nn/modules/transformer.py:379: UserWarning: enable_nested_tensor is True, but self.use_nested_tensor is False because encoder_layer.norm_first was True\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 01 | train_loss 0.7051 acc 0.5150 | val_loss 0.6360 acc 0.4400\n",
+      "Epoch 02 | train_loss 0.5645 acc 0.5550 | val_loss 0.6008 acc 0.5600\n",
+      "Epoch 03 | train_loss 0.5429 acc 0.5575 | val_loss 0.5513 acc 0.4400\n",
+      "Epoch 04 | train_loss 0.5504 acc 0.4800 | val_loss 0.5517 acc 0.4400\n",
+      "Epoch 05 | train_loss 0.5461 acc 0.5350 | val_loss 0.5510 acc 0.4400\n",
+      "Epoch 06 | train_loss 0.5472 acc 0.5275 | val_loss 0.5548 acc 0.6200\n",
+      "Epoch 07 | train_loss 0.5421 acc 0.5100 | val_loss 0.5894 acc 0.5600\n",
+      "Epoch 08 | train_loss 0.5164 acc 0.6125 | val_loss 0.5231 acc 0.6900\n",
+      "Epoch 09 | train_loss 0.4658 acc 0.7175 | val_loss 0.5240 acc 0.6600\n",
+      "Epoch 10 | train_loss 0.4362 acc 0.7425 | val_loss 0.5624 acc 0.6800\n",
+      "Epoch 11 | train_loss 0.4059 acc 0.7950 | val_loss 0.5191 acc 0.6700\n",
+      "Epoch 12 | train_loss 0.3822 acc 0.8000 | val_loss 0.5552 acc 0.6500\n",
+      "Epoch 13 | train_loss 0.3517 acc 0.8175 | val_loss 0.5304 acc 0.6300\n",
+      "Epoch 14 | train_loss 0.3442 acc 0.8025 | val_loss 0.6135 acc 0.5900\n",
+      "Epoch 15 | train_loss 0.3141 acc 0.8350 | val_loss 0.6576 acc 0.6200\n",
+      "Epoch 16 | train_loss 0.3300 acc 0.7775 | val_loss 0.7324 acc 0.6400\n",
+      "Epoch 17 | train_loss 0.2694 acc 0.8500 | val_loss 0.8225 acc 0.6900\n",
+      "Epoch 18 | train_loss 0.2898 acc 0.8450 | val_loss 0.6683 acc 0.6500\n",
+      "Epoch 19 | train_loss 0.2797 acc 0.8500 | val_loss 0.9118 acc 0.6200\n",
+      "Epoch 20 | train_loss 0.2710 acc 0.8425 | val_loss 0.7805 acc 0.6200\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = train_prototype(gfp_dataset_original, n=500, client=client, WT=WT, in_dim=1152, epochs=20, batch_size=32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8565dbf2",
    "metadata": {},
    "outputs": [],
    "source": []
